test/ui/test/packages/faulty-component-paths/one/package.stderr
error: could not load the library component ‘test’ in package ‘test’
  ┌─ ${TEST_FOLDER}/packages/faulty-component-paths/one/nonexistent.lushui
  │
  ├─ ${TEST_FOLDER}/packages/faulty-component-paths/one/package.recnot:8:16
  │
8 │         path: "nonexistent.lushui",
  │                ══════════════════
  │
 note: No such file or directory (os error 2)

error: aborting due to previous error

